# KoalaKeys

./: .dockerignore  .gitignore  Dockerfile  README.md  build.docker.sh  cheatsheet_template.html  docker-compose.yaml  example_cheatsheet.html  generate_cheatsheet.py  guide.md  neovim.yaml  pyproject.toml  requirements.txt  template.yaml  yaml_cheatsheet_spec.md
.github/: dependabot.yml
.github/actions/setup-python/: action.yml
.github/workflows/: lint.yml  pytest.yml
cheatsheets/: example-cheatsheet.yaml  example.yaml  ipad.yaml  macos.yaml  windows.yaml
docker/: cmd.sh
docs/schema/: cheatsheet.schema.json
output/: example_cheatsheet.html
src/: cheatsheet_template.html  generate_cheatsheet.py  index_template.html  logger.py  serve.py  styles.css  template_renderer.py  validate_yaml.py
src/configs/: keyboard_layouts.yaml
src/layouts/: keyboard_layouts.yaml
src/templates/: base.html  cheatsheet_template.html
src/templates/cheatsheets/: cheatsheet-template.html
src/templates/index/: index_template.html
tests/: __init__.py  conftest.py  test_generate_cheatsheet.py  test_replace_shortcut_names.py  test_template_renderer.py  test_validate_yaml.py
tests/fixtures/invalid/: bad_indentation.yaml  invalid_keyboard.yaml  invalid_shortcut_format.yaml  invalid_system.yaml  long_lines.yaml  malformed.yaml  missing_description.yaml  missing_shortcuts.yaml  missing_title.yaml  non_dict_category.yaml  non_dict_shortcuts.yaml  trailing_whitespace.yaml
tests/fixtures/valid/: allowtext_mode.yaml  full_featured.yaml  minimal.yaml
(+7 files in other folders)
